# iterative-linear-solver

./: .gitignore  README.md  cli.py  conjugate_gradient.py  constants.py  gauss_sidel.py  gradient.py  ifelifelse.sh  jacobi.py  lower_triangular.py  main.py  pyproject.toml  results.csv  results.json  utils.py
demo/: cli.py  constants.py  logger.py  main.py
docs/latex/: conclusion.tex  intro.tex  main.tex  methods.tex  structure.tex
linear_solver/analysis/: benchmark.py  compare_plot.py  plot.py
linear_solver/convergence/: criteria.py
linear_solver/matrix_analysis/: __init__.py  structure.py
linear_solver/solvers/: __init__.py  base_solver.py  conjugate_gradient.py  gauss_seidel.py  gradient.py  jacobi.py  lower_triangular.py
linear_solver/utils/: __init__.py  utils.py
