[project]
name = "iterative-linear-solver"
version = "0.1.0"
description = "A python library for solving linear systems using iterative methods. It includes Jacobi, Gauss-Seidel, Gradient, and Conjugate Gradient methods. The library aalso provides benchmarking and visualization utilities."
readme = "README.md"
authors = [
  { name = "Ferrario Christian", email = "c.ferrario30@campus.unimib.it" },
  { name = "Lanza Andrea", email = "a.lanza13@campus.unimib.it" },
]
requires-python = ">=3.8"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "scipy",
]

[tool.setuptools.packages.find]
include = [ "linear_solver", "linear_solver.*", "demo"]

[project.scripts]
linear-solver-demo = "demo.main:main"
